--- a/contrib/man/host-metering.1
+++ b/contrib/man/host-metering.1
@@ -28,10 +28,12 @@ Will be used as the proxy URL for HTTP requests unless overridden by NO_PROXY.
 \fBHTTPS_PROXY\fR
 Will be used as the proxy URL for HTTPS requests unless overridden by NO_PROXY.
 
-As systemd services do not have visibility into environment variables that are active in the user environment by default, the HTTP_PROXY and HTTPS_PROXY variables set within the user environment will not be detected by the host-metering service. 
+As systemd services do not have visibility into environment variables that are active in the user environment by default, the HTTP_PROXY and HTTPS_PROXY variables set within the user environment will not be detected by the host-metering service.
+By default, the host-metering service will use the 'proxy_hostname' and 'proxy_port' as configured in '/etc/rhsm/rhsm.conf'.
 To use custom proxy settings that will persist across package updates, you can create a .conf override file containing your custom proxy settings within the `/etc/systemd/system/host-metering.service.d/` directory.
+This override configuration will take priority over proxy information available in '/etc/rhsm/rhsm.conf'.
 
-Example override file contents: 
+Example override file contents:
 [Service]
 Environment="HTTP_PROXY=http://proxy.example.com:3465"
 Environment="HTTPS_PROXY=http://proxy.example.com:3465"
